// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/post_view/PostFlagIcon should match snapshot 1`] = `
<OverlayTrigger
  defaultOverlayShown={false}
  delayShow={400}
  key="flagtooltipkey"
  overlay={
    <Tooltip
      bsClass="tooltip"
      id="flagTooltip"
      placement="right"
    >
      <FormattedMessage
        defaultMessage="Flag for follow up"
        id="flag_post.flag"
        values={Object {}}
      />
    </Tooltip>
  }
  placement="top"
  trigger={
    Array [
      "hover",
      "focus",
    ]
  }
>
  <button
    className="style--none flag-icon__container "
    id="centerPostFlag_post_id"
    onClick={[Function]}
  >
    <FlagIcon
      className="icon"
    />
  </button>
</OverlayTrigger>
`;

exports[`components/post_view/PostFlagIcon should match snapshot 2`] = `
<OverlayTrigger
  defaultOverlayShown={false}
  delayShow={400}
  key="flagtooltipkeyvisible"
  overlay={
    <Tooltip
      bsClass="tooltip"
      id="flagTooltip"
      placement="right"
    >
      <FormattedMessage
        defaultMessage="Unflag"
        id="flag_post.unflag"
        values={Object {}}
      />
    </Tooltip>
  }
  placement="top"
  trigger={
    Array [
      "hover",
      "focus",
    ]
  }
>
  <button
    className="style--none flag-icon__container visible"
    id="centerPostFlag_post_id"
    onClick={[Function]}
  >
    <FlagIconFilled
      className="icon"
    />
  </button>
</OverlayTrigger>
`;

exports[`components/post_view/PostFlagIcon should match snapshot 3`] = `""`;
